# serializer version: 1
# name: test_detector[IncorrectSolc-0.5.16-dynamic_1.sol]
  list([
    list([
      dict({
        'check': 'solc-version',
        'confidence': 'High',
        'description': '''
          Pragma version^0.5.15 (tests/detectors/solc-version/0.5.16/dynamic_1.sol#1) allows old versions
  
        ''',
        'elements': list([
          dict({
            'name': '^0.5.15',
            'source_mapping': dict({
              'ending_column': 25,
              'filename_absolute': '/GENERIC_PATH',
              'filename_relative': 'tests/detectors/solc-version/0.5.16/dynamic_1.sol',
              'filename_short': 'tests/detectors/solc-version/0.5.16/dynamic_1.sol',
              'is_dependency': False,
              'length': 24,
              'lines': list([
                1,
              ]),
              'start': 0,
              'starting_column': 1,
            }),
            'type': 'pragma',
            'type_specific_fields': dict({
              'directive': list([
                'solidity',
                '^',
                '0.5',
                '.15',
              ]),
            }),
          }),
        ]),
        'first_markdown_element': 'tests/detectors/solc-version/0.5.16/dynamic_1.sol#L1',
        'id': 'b837ad353716586dca5845e185efa85b1ed38c36ff731820ea9a42fc72171527',
        'impact': 'Informational',
        'markdown': '''
          Pragma version[^0.5.15](tests/detectors/solc-version/0.5.16/dynamic_1.sol#L1) allows old versions
  
        ''',
      }),
    ]),
  ])
# ---
# name: test_detector[IncorrectSolc-0.5.16-dynamic_2.sol]
  list([
    list([
      dict({
        'check': 'solc-version',
        'confidence': 'High',
        'description': '''
          Pragma version>=0.5.0<0.6.0 (tests/detectors/solc-version/0.5.16/dynamic_2.sol#1) allows old versions
  
        ''',
        'elements': list([
          dict({
            'name': '>=0.5.0<0.6.0',
            'source_mapping': dict({
              'ending_column': 32,
              'filename_absolute': '/GENERIC_PATH',
              'filename_relative': 'tests/detectors/solc-version/0.5.16/dynamic_2.sol',
              'filename_short': 'tests/detectors/solc-version/0.5.16/dynamic_2.sol',
              'is_dependency': False,
              'length': 31,
              'lines': list([
                1,
              ]),
              'start': 0,
              'starting_column': 1,
            }),
            'type': 'pragma',
            'type_specific_fields': dict({
              'directive': list([
                'solidity',
                '>=',
                '0.5',
                '.0',
                '<',
                '0.6',
                '.0',
              ]),
            }),
          }),
        ]),
        'first_markdown_element': 'tests/detectors/solc-version/0.5.16/dynamic_2.sol#L1',
        'id': '0f9930eec9fe7848abc3ded6a5fc053e0208ffa1510b01518fb1348e0f0b01b1',
        'impact': 'Informational',
        'markdown': '''
          Pragma version[>=0.5.0<0.6.0](tests/detectors/solc-version/0.5.16/dynamic_2.sol#L1) allows old versions
  
        ''',
      }),
    ]),
  ])
# ---
# name: test_detector[IncorrectSolc-0.5.16-static.sol]
  list([
    list([
    ]),
  ])
# ---
